# rodeo893

./: .env.dev.example  .env.example  .gitignore  Makefile  docker-compose.data.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Cargo.toml
backend/.sqlx/: query-01ced10ece72ddae1f1aabd9695931a64435e2521324fa5fecaac111362592d1.json  query-05abd096cfeebebad3998b57f392743034c9ce317798ccd7097816d29459d4ac.json  query-05cea2b0acd60a18dc0e84e50b37848c4590623d3a67fb9d77264f406b5d5a69.json  query-0e6c22adeb5f80fbc5e445d864268c151e831c169d16195ae286b641380fa477.json  query-0ff54f3d44604771c321cfbcd252cea3f2affcddbffbb9b2ae6df58d403034bf.json  query-14f463174be66883b890d82aed9e65d48287a93892c3296b3e54c3acff7186a4.json  query-164f965c1d2af5ac38abe9400c34dcf85ef14662188154e2d988c5d65723ebb5.json  query-198dfc1a4108e31f742c3cf67d4f170ebe8389e245e9df860acfe178d6f8849b.json  query-1e38b68cbfb9eadef557d032c18323f6c469d5a97ca789569b7ea5822faf8922.json  query-1fe4c9623ed993e75d18a7c5944d7296939ab6c8935ff3974d486eae323b2798.json  query-255b9ab7011bb9966def39304d6cf547323f8ee04b6aeff379775a41d24a7959.json  query-25ca69455d8107188262a3fb4303c36a96c98df9a9d24b4ae0751a708d45a92b.json  query-29379aab98ae7aac99d7cf0116f11e292713af83ab56eb165ec474a9481a5d41.json  query-2c1caad56fb6e44e763970ef58beb01181abfafe6d10843c5a02faf2841ff864.json  query-2d296465628798e81659a242d41ab84e22abd5245945f519f3266e3a05e17e0a.json  query-2dabb94d05dd4f61b6213c445a0dea5b349c3425771a6bafd0410c09004d6484.json  query-2f92f5f9c28bce9e65d87744e6fe3102632ae1ccc159fbeb86de76a5f5609c80.json  query-3356a820bfc8d71eaa3efef6d4306b82cc8b8378fb4241e5e52bd8ba82b1df38.json  query-35dade7c6f2c3ad94aec0444176190b2bf2a5b7a71267e24e8fe142a8547cd0a.json  query-3642e5958cc3744a8d8c1c259316c0edc193ab3024099d1037f5bef3e347920e.json  query-3879f54c5c35ea030c801f4098541ecd51eb39184aa577b4882783fe3aa3959e.json  query-3bb7b0af5aff8802c7d4dd57bbf76bf8664eb93baf045b3e628739bb120ea2ab.json  query-3e51d50fe7ad4f31e714bbcd6e6f461cd9d9c7a29b472760b20e34f173e34a31.json  query-47efb6ed359816051b43477cd81ccce6e19a4601e69e37f4d098d3c05cd3179a.json  query-49d27b7b8dd3af4b2002141f178e0bea66c126f6721eb46aa1eafd70912445fd.json  query-4ade6b2084d2e96ee3eead76bb0c9b3fe50aa1e0b77906139c1e9bc06e189b7a.json  query-4c9902b935ef4d71e24d66b7786b68111cf604197931347003787f7bea2407a0.json  query-4da0b3f2bacc3a71fd83804958fab57458fdaf73d94e700e82d137ddb6e2b26f.json  query-4ffed1ab6c3e9e748e447ac8b03ee2b1c693981250215936b1819c10c1c3b32a.json  query-50ed58284bd3a1b50579ea6ede67fadbe7b82ef6a6378e37abdbd7adb31d6286.json  query-51e8ccf60cf568fd8e5af91470ab303105ef4cf57fd2987a9a281345b9fefb11.json  query-58cda4665025c0917cb75dad854bec47b30844671c005481216cecf7caff5979.json  query-5c389328d4a5378ba2738dc49a9caf48046ea49d5f1d154563ca592513010a79.json  query-5d0e54f678c83f356e3db283244e6d7b639a3711ae837e614928c31b843060f4.json  query-5e31c90e6da9c9923ea613e4f947915e9a61b10a42c767a5c1871dffd2288d7c.json  query-5e3d5f87e17bc02d4002a9a426230976983f65e0ea1f226531118a80c60ba169.json  query-5eb91885c9a46caf34b9746ea7cdfcc7e95886ee047d4ce7b0b10b67e90eaebf.json  query-5febb647ab8fc90af9ec022a901f884a9d23edf8a6440e7a27cfcb9aba6cff5b.json  query-6696b2ae8d545db45dcbbfea8ece18f3e8a49e7ff7e9c84c5e8208b57b171633.json  query-675f1faca90582656881adccb330cd9aad0bb70d1ca1bf9e98308886d91dea8f.json  (+61 more)
backend/crates/api/: Cargo.toml
backend/crates/api/src/: error.rs  extractors.rs  lib.rs  openapi.rs  router.rs  state.rs
backend/crates/api/src/handlers/: auth.rs  health.rs  membership.rs  mod.rs  occasions.rs  orders.rs  payments.rs  products.rs  staff.rs  stock.rs  user.rs
backend/crates/api/src/middleware/: auth_staff.rs  auth_user.rs  mod.rs
backend/crates/application/: Cargo.toml
backend/crates/application/src/: error.rs  lib.rs
backend/crates/application/src/dto/: auth.rs  membership.rs  mod.rs  order.rs  payment.rs  product.rs  staff.rs  tracking.rs  user.rs
backend/crates/application/src/use_cases/: activate_membership.rs  announce_occasion.rs  attach_tracking.rs  cancel_order.rs  create_occasion.rs  create_product.rs  create_stock_batch.rs  deactivate_product.rs  get_membership_status.rs  get_order_by_reference.rs  get_user_profile.rs  handle_payment_webhook.rs  issue_cashback.rs  list_orders.rs  login_user.rs  logout_user.rs  mod.rs  place_order.rs  process_refund.rs  register_user.rs  release_stock_batch.rs  staff_login.rs  staff_refresh.rs  update_order_status.rs  update_product.rs  update_stock_batch.rs  upsert_address.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: error.rs  lib.rs
backend/crates/domain/src/entities/: membership.rs  mod.rs  notification.rs  occasion.rs  order.rs  payment.rs  product.rs  refund.rs  staff.rs  stock.rs  tracking.rs  user.rs
backend/crates/domain/src/repositories/: membership.rs  notification.rs  occasion.rs  order.rs  payment.rs  product.rs  refund.rs  staff.rs  stock.rs  tracking.rs  user.rs
backend/crates/infrastructure/: Cargo.toml
backend/crates/infrastructure/src/: config.rs  lib.rs
backend/crates/infrastructure/src/auth/: argon2_hasher.rs  jwt_service.rs  mod.rs
backend/crates/infrastructure/src/cache/: mod.rs  product_cache.rs  tracking_cache.rs
backend/crates/infrastructure/src/database/: mod.rs  pg_membership_repository.rs  pg_notification_repository.rs  pg_occasion_repository.rs  pg_order_repository.rs  pg_payment_repository.rs  pg_product_repository.rs  pg_refund_repository.rs  pg_staff_repository.rs  pg_stock_repository.rs  pg_tracking_repository.rs  pg_user_repository.rs
backend/migrations/: 0001_staff.sql  0002_users.sql  0003_membership.sql  0004_products.sql  0005_stock.sql  0006_occasions.sql  0007_orders.sql  0008_payments.sql  0009_refunds.sql  0010_tracking.sql  0011_notifications.sql  0012_internal_delivery.sql  0013_product_i18n.sql  0014_catalog_slug_i18n.sql
backend/seeds/: export.js  import.js  package-lock.json  package.json
backend/seeds/data/: categories.json  products.json
backend/src/: Cargo.toml  main.rs
docker/: backend.Dockerfile  (+1 more)
(+90 files in other folders)
