[workspace]
members = [
    "src",
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["rodeo893"]
license = "MIT"

[workspace.dependencies]
# ── Internal ──────────────────────────────────────────────────────────────────
domain          = { path = "crates/domain" }
application     = { path = "crates/application" }
infrastructure  = { path = "crates/infrastructure" }
api             = { path = "crates/api" }

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio           = { version = "1", features = ["full"] }

# ── Web ───────────────────────────────────────────────────────────────────────
axum            = { version = "0.8", features = ["macros"] }
tower           = { version = "0.5" }
tower-http      = { version = "0.6", features = ["cors", "trace", "compression-br", "request-id"] }

# ── Database ──────────────────────────────────────────────────────────────────
sqlx            = { version = "0.8", features = [
    "postgres", "runtime-tokio", "macros", "migrate",
    "uuid", "chrono", "json"
]}

# ── Cache ─────────────────────────────────────────────────────────────────────
deadpool-redis  = { version = "0.18", features = ["tokio-comp"] }
redis           = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# ── Jobs ──────────────────────────────────────────────────────────────────────
apalis          = { version = "0.6", features = ["tokio-comp"] }
apalis-sql      = { version = "0.6", features = ["postgres"] }

# ── OpenAPI ───────────────────────────────────────────────────────────────────
utoipa          = { version = "5", features = ["uuid", "chrono"] }
utoipa-scalar   = { version = "0.2" }

# ── Serialization ─────────────────────────────────────────────────────────────
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"

# ── Types ─────────────────────────────────────────────────────────────────────
uuid            = { version = "1", features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
rust_decimal    = { version = "1", features = ["serde-with-str", "db-postgres"] }

# ── Validation ────────────────────────────────────────────────────────────────
validator       = { version = "0.19", features = ["derive"] }

# ── Auth / Crypto ─────────────────────────────────────────────────────────────
argon2          = "0.5"
rand            = "0.8"
sha2            = "0.10"
hex             = "0.4"
jsonwebtoken    = "9"
hmac            = "0.12"

# ── HTTP client ───────────────────────────────────────────────────────────────
reqwest         = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# ── Email ─────────────────────────────────────────────────────────────────────
lettre          = { version = "0.11", features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }

# ── Error handling ────────────────────────────────────────────────────────────
thiserror       = "2"
anyhow          = "1"

# ── Logging / Tracing ─────────────────────────────────────────────────────────
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── Config ────────────────────────────────────────────────────────────────────
dotenvy         = "0.15"
config          = { version = "0.14", features = ["toml"] }

# ── Misc ──────────────────────────────────────────────────────────────────────
async-trait     = "0.1"
once_cell       = "1"

[profile.release]
lto             = true
codegen-units   = 1
strip           = true
