[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
domain.workspace          = true
application.workspace     = true
infrastructure.workspace  = true

tokio.workspace           = true
axum.workspace            = true
tower.workspace           = true
tower-http.workspace      = true
serde.workspace           = true
serde_json.workspace      = true
uuid.workspace            = true
chrono.workspace          = true
rust_decimal.workspace    = true
utoipa.workspace          = true
utoipa-scalar            = { workspace = true, features = ["axum"] }
thiserror.workspace       = true
anyhow.workspace          = true
tracing.workspace         = true
validator.workspace       = true
jsonwebtoken.workspace    = true
sqlx.workspace            = true
deadpool-redis.workspace  = true
sha2.workspace            = true
hex.workspace             = true
async-trait.workspace     = true
