[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
domain.workspace        = true

uuid.workspace          = true
chrono.workspace        = true
serde.workspace         = true
serde_json.workspace    = true
thiserror.workspace     = true
anyhow.workspace        = true
async-trait.workspace   = true
validator.workspace     = true
rust_decimal.workspace  = true
tracing.workspace       = true
sha2.workspace          = true
hex.workspace           = true
rand.workspace          = true
