[package]
name = "domain"
version.workspace = true
edition.workspace = true

[dependencies]
uuid.workspace      = true
chrono.workspace    = true
serde.workspace     = true
serde_json.workspace = true
thiserror.workspace = true
rust_decimal.workspace = true
async-trait.workspace  = true
sqlx             = { version = "0.8", features = ["postgres"], default-features = false }
